info_TEXINFOS = lightning.texi 
EXTRA_TEXINFOS = u-lightning.texi p-lightning.texi
MOSTLYCLEANFILES = lightning.tmp

lightning_TEXINFOS = body.texi toc.texi using.texi porting.texi version.texi
u_lightning_TEXINFOS = body.texi toc.texi using.texi version.texi
p_lightning_TEXINFOS = body.texi toc.texi porting.texi version.texi
